# pinball-env

./: .gitignore  LICENSE  README.md  pyproject.toml
src/examples/: basic_usage.py  basic_usage_with_feature_construction.py  linear_q_learning_with_feature_construction.py  random_agent.py
src/pinball_env/: __init__.py  pinball.py  pinball_configs.py
src/pinball_env/feature_construction/: tile_coder.py
src/pinball_env/models/: model_learning.py
