[project]
name = "pinball-env"
version = "0.1.0"
description = "Pinball domain for reinforcement learning"
readme = "README.md"
authors = [
    { name = "luizth", email = "luizthomasini@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.0",
    "numpy>=2.3.1",
    "pygame>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pinball_env"]

[tool.hatch.build.targets.wheel.sources]
"src/pinball_env" = "pinball_env"

# Include external dependencies in the package
[tool.hatch.build.targets.wheel.force-include]
"src/pinball_env/external/tiles3.py" = "pinball_env/external/tiles3.py"
